[package]
name = "jsonparser"
version = "0.2.0"
description = "A Rust crate for efficient parsing and validation of JSON data into strongly typed Rust data structures, enabling data integrity checks."
authors = ["Nethris <david.abou@epitech.eu>"]
edition = "2021"
keywords = ["json", "parser", "rust", "serialization", "validation", "transformation"]
categories = ["parsing", "encoding", "parser-implementations", "web-programming"]
documentation = "https://docs.rs/jsonparser"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nethriis/json-parser"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
